--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,11 @@
 {
   "name": "tw-debugger",
-  "version": "2.0.8.0",
-  "description": "重定向api请求到开发者服务器",
+  "version": "2.0.9.0",
+  "description": "重定向api请求到开发者服务器，查看接口信息",
   "browser_action": {
     "default_popup": "popup.html"
   },
   "permissions": [
-    "contextMenus",
     "webRequest",
     "webRequestBlocking",
     "storage",
@@ -37,8 +36,7 @@
   },
   "background": {
     "scripts": [
-      "background.js",
-      "create_menus.js"
+      "background.js"
     ]
   },
   "manifest_version": 2
